# multicloud-challenge

./: .gitignore  PROJECT_PLAN.md  README.md
ci-cd/: buildspec.yml
kubernetes/: cloudmart-backend.yaml  cloudmart.yaml
lambda/: package.ps1
lambda/bigquery-sync/: environment.yml  index.py
lambda/product-recommendations/: environment.yml  index.py
scripts/: build_and_push.bat  build_and_push.ps1  cleanup.bat  cleanup.ps1  load_products.sh  setup.sh  setup_eks.bat  setup_eks.ps1
src/app/: Dockerfile  main.py  pyproject.toml
src/app/api/: ai.py  orders.py  products.py  tickets.py
src/app/core/: security.py
src/app/models/: order.py  product.py  ticket.py
src/app/routes/: web.py
src/app/services/: ai_service.py  order_service.py  product_service.py  ticket_service.py
src/app/static/css/: main.css
src/app/static/js/: cart.js  chat.js  products.js
src/app/templates/: 404.html  cart.html  home.html  orders.html  products.html  ticket_conversation.html  tickets.html
terraform/: eks.tf  main.tf
terraform/aws/: main.tf
terraform/azure/: main.tf
terraform/bedrock/: main.tf
terraform/bigquery/: main.tf
terraform/ci-cd/: main.tf
terraform/kubernetes/: main.tf
